--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,5 +1,3 @@
-
-
 body {
     align-items: center;
     margin: 0px;
@@ -7,11 +5,16 @@ body {
     background-color: grey;
 }
 
+h1 {
+    text-align: center;
+    height: 50%;
+}
+
 .counter {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 20%;
+    margin-top: 15%;
     gap: 1rem;
 }
 
